--- a/PianoApp/PianoApp/Views/MainWindow.xaml
+++ b/PianoApp/PianoApp/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PianoApp"
         mc:Ignorable="d"
-        Title="KeyBoard Hero" Height="720" Width="1280"
+        Title="Keyboard Hero" Height="720" Width="1280"
         ResizeMode="NoResize"
         KeyDown="Window_KeyDown"
         KeyUp="Window_KeyUp">
