--- a/PianoApp/PianoApp/Views/MusicChooseView.xaml
+++ b/PianoApp/PianoApp/Views/MusicChooseView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PianoApp"
         mc:Ignorable="d"
-        Title="Choicemenu" Height="640" Width="800"
+        Title="Keyboard Hero - Choose a musicpiece" Height="640" Width="800"
         ResizeMode="NoResize"
         >
     <Grid>
